--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
               <li><a href="/banks">Banks</a></li>
               <li><a href="/conference">Conference</a></li>
               <li><a href="/contact">Contact</a></li>
-              <li><a href="/intra">Intranet</a></li>
+              <li><a href="/intranet">Intranet</a></li>
             </ul>
             <form class="navbar-search pull-right" action="">
               <input type="text" class="search-query span2" placeholder="Search">
