--- a/templates/base.html
+++ b/templates/base.html
@@ -52,8 +52,8 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/static/jquery-1.7.1.min.js"></script>
-    <script src="/static/bootstrap.min.js"></script>
+    <script src="/static/js/jquery-1.7.1.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
 
 
   </body>
