start intranet template

--- a/templates/about/base.html
+++ b/templates/about/base.html
@@ -5,19 +5,19 @@
   <div class="span2">
             <div class="well sidebar-nav">
               <ul class="nav nav-list">
-                <li{% if page == 'about' %} class='active'{% else %}{% endif %}>
+                <li{% if page == 'main' %} class='active'{% endif %}>
                   <a href="/about">About</a>
                 </li>
-                <li{% if page == 'join' %} class='active'{% else %}{% endif %}>
+                <li{% if page == 'join' %} class='active'{% endif %}>
                   <a href="/about/join">Join</a>
                 </li>
-                <li{% if page == 'committees' %} class='active'{% else %}{% endif %}>
+                <li{% if page == 'committees' %} class='active'{% endif %}>
                   <a href="/about/committees">Committees</a>
                 </li>
-                <li{% if page == 'corporate' %} class='active'{% else %}{% endif %}>
+                <li{% if page == 'corporate' %} class='active'{% endif %}>
                   <a href="/about/corporate">Corporate</a>
                 </li>
-                <li{% if page == 'members' %} class='active'{% else %}{% endif %}>
+                <li{% if page == 'members' %} class='active'{% endif %}>
                   <a href="/about/members">Members</a>
                 </li>
                 
