--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
             <ul class="nav">
               <li><a href="/about">About</a></li>
               <li><a href="/calendar">Calendar</a></li>
-              <li><a href="/sigs">Sigs</a></li>
+              <li><a href="/sigs">SIGs</a></li>
               <li><a href="/banks">Banks</a></li>
               <li><a href="/conference">Conference</a></li>
               <li><a href="/contact">Contact</a></li>
