--- a/templates/main.html
+++ b/templates/main.html
@@ -1,9 +1,18 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="hero-unit">
-  <h1>Welcome to ACM@UIUC!</h1>
-  <p>The Association for Computing Machinery (ACM) is a student group consisting of a variety of people with diverse backgrounds who share a common interest in computers. ACM is open to students, faculty, and staff in all fields at the University of Illinois. Within ACM, we have a variety of special interest groups (SIGs) that focus on specific areas of computing. From computer graphics to mobile computing, we have groups that cover everything.</p>
-  <p><a class="btn btn-primary btn-large" href="/about">Learn more &raquo;</a></p>
+
+<div id="myCarousel" class="carousel">
+   <!-- Carousel items -->
+     <div class="carousel-inner">
+       <div class="active item hero-unit">
+         <h1>Welcome to ACM@UIUC!</h1>
+         <p>The Association for Computing Machinery (ACM) is a student group consisting of a variety of people with diverse backgrounds who share a common interest in computers. ACM is open to students, faculty, and staff in all fields at the University of Illinois. Within ACM, we have a variety of special interest groups (SIGs) that focus on specific areas of computing. From computer graphics to mobile computing, we have groups that cover everything.</p>
+         <p><a class="btn btn-primary btn-large" href="/about">Learn more &raquo;</a></p>
+       </div>
+     </div>
+     <!-- Carousel nav -->
+     <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+     <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
 </div>
 
 <!-- Example row of columns -->
