work on sig form

--- a/templates/intranet/base.html
+++ b/templates/intranet/base.html
@@ -29,7 +29,10 @@
                   <a href="/intranet/jobs">Jobs Manager</a>
                 </li> 
                 <li{% if page == 'calendar' %} class='active'{% endif %}>
-                  <a href="/intranet/calendar">Calendar Manager</a>
+                  <a href="/intranet/events">Event Manager</a>
+                </li>
+                <li{% if page == 'banks' %} class='active'{% endif %}>
+                  <a href="/intranet/banks">Banks Manager</a>
                 </li>
                 <li{% if page == 'sig' %} class='active'{% endif %}>
                   <a href="/intranet/sig">SIG Manager</a>
@@ -37,9 +40,6 @@
                 <li{% if page == 'office_hours' %} class='active'{% endif %}>
                   <a href="/intranet/office_hours">Office Hours Manager</a>
                 </li>
-                <li{% if page == 'banks' %} class='active'{% endif %}>
-                  <a href="/intranet/banks">Banks Manager</a>
-                </li>      
                 <li{% if page == 'treasure_chest' %} class='active'{% endif %}>
                   <a href="/intranet/treasure_chest">Treasure Chest</a>
                 </li>
