--- a/templates/intranet/sig_manager/main.html
+++ b/templates/intranet/sig_manager/main.html
@@ -3,7 +3,7 @@
 <header class="page-header">
 <h1>SIG Manager</h1>
 </header>
-
+<a href="/intranet/sig/new" class="btn">Create New SIG</a>
 {% for s in sigs %}
 
 {% endfor %}
