Setup other apps

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
               <li><a href="/calendar">Calendar</a></li>
               <li><a href="/sigs">SIGs</a></li>
               <li><a href="/banks">Banks</a></li>
-              <li><a href="/conference">Conference</a></li>
+              <li><a href="http://www.acm.uiuc.edu/conference/">Conference</a></li>
               <li><a href="/contact">Contact</a></li>
               <li><a href="/intranet">Intranet</a></li>
             </ul>
