Change sig_manager to group_manager

--- a/templates/intranet/base.html
+++ b/templates/intranet/base.html
@@ -35,7 +35,7 @@
                   <a href="/intranet/banks">Banks Manager</a>
                 </li>
                 <li{% if page == 'sig' %} class='active'{% endif %}>
-                  <a href="/intranet/sig">SIG Manager</a>
+                  <a href="/intranet/group">Group Manager</a>
                 </li>   
                 <li{% if page == 'office_hours' %} class='active'{% endif %}>
                   <a href="/intranet/office_hours">Office Hours Manager</a>
