--- a/templates/intranet/group_manager/main.html
+++ b/templates/intranet/group_manager/main.html
@@ -1,10 +1,10 @@
 {% extends "intranet/base.html" %}
 {% block intranet_content %}
 <header class="page-header">
-<h1>SIG Manager</h1>
+<h1>Group Manager</h1>
 </header>
-<a href="/intranet/sig/new" class="btn">Create New SIG</a>
-{% for s in sigs %}
+<a href="/intranet/group/new" class="btn">Create New Group</a>
+{% for g in group %}
 
 {% endfor %}
 {% endblock %}
