--- a/templates/intranet/group_manager/form.html
+++ b/templates/intranet/group_manager/form.html
@@ -3,7 +3,7 @@
 <header class="page-header">
 <h1>{{ page_title }}</h1>
 </header>
-<form class="well" method="post">
+<form class="well" method="post" enctype="multipart/form-data">
   {% csrf_token %}
   {{ form.non_field_errors }}
   <div class="control-group{% if form.name.errors %} error {% endif %}">
