--- a/templates/intranet/group_manager/form.html
+++ b/templates/intranet/group_manager/form.html
@@ -6,6 +6,14 @@
 <form class="well" method="post" enctype="multipart/form-data">
   {% csrf_token %}
   {{ form.non_field_errors }}
+  <div class="control-group{% if form.type.errors %} error {% endif %}">
+    <label class="control-label" for="textarea">Group Type:</label>
+    <div class="controls">
+      
+     <span class="help-inline">{{ form.type.errors }}</span>
+    </div>
+  </div>
+  
   <div class="control-group{% if form.name.errors %} error {% endif %}">
     <label class="control-label" for="textarea">Group Name:</label>
     <div class="controls">
@@ -71,7 +79,7 @@
   </div>
   
   <hr>
-  
+  <!--
   <div class="control-group{% if form.chair.errors %} error {% endif %}">
     <label class="control-label" for="input">Chair(s):</label>
     <div class="controls">
@@ -87,7 +95,7 @@
       <input type="text" class="span5" value="{% if form.members.value %}{{ form.members.value }}{% endif %}" name="members">
     </div>
   </div>
-  
+  -->
   <hr>
   
   <div class="control-group">
