Fixing a minor typo (UICU -> UIUC in footer)

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
       <hr>
 
       <footer>
-        © ACM@UICU | <a href="mailto:webmaster@acm.uiuc.edu">webmaster@acm.uiuc.edu</a> | office phone (217) 333-5828 | email <a href="acm@uiuc.edu">acm@uiuc.edu</a>
+        © ACM@UIUC | <a href="mailto:webmaster@acm.uiuc.edu">webmaster@acm.uiuc.edu</a> | office phone (217) 333-5828 | email <a href="acm@uiuc.edu">acm@uiuc.edu</a>
       </footer>
 
     </div> <!-- /container -->
