--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
         <div class="header_bar">
           <img src="/static/img/ilogo.png" class="ilogo">
           <a class="brand" href="/">
-            <img src="/static/img/logo.png" class="logo">
+            <img src="/static/img/logo.png" width="150" height="150" class="logo">
             <div>
               <strong>Association for Computing Machinery</strong><br>
               <em>University of Illinois at Urbana-Champaign</em>
