--- a/templates/intranet/base.html
+++ b/templates/intranet/base.html
@@ -38,7 +38,7 @@
           <li{% if page == 'banks' %} class='active'{% endif %}>
             <a href="/intranet/banks">Banks Manager</a>
           </li>
-          <li{% if page == 'sig' %} class='active'{% endif %}>
+          <li{% if page == 'group' %} class='active'{% endif %}>
             <a href="/intranet/group">Group Manager</a>
           </li>   
           <li{% if page == 'office_hours' %} class='active'{% endif %}>
