--- a/templates/intranet/group_manager/form.html
+++ b/templates/intranet/group_manager/form.html
@@ -4,7 +4,7 @@
 <header class="page-header">
 <h1>{{ page_title }}</h1>
 </header>
-<form class="well" method="post" enctype="multipart/form-data">
+<form class="well" method="post">
   {% csrf_token %}
   {{ form|bootstrap }}
   <div class="control-group">
