add exec intranet and move accounts to profile

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,74 +3,74 @@
 <header class="page-header">
 <h1>Contact ACM@UIUC</h1>
 </header>
-<section>
-  <h2>Address</h2>
+<div class="row">
+  <div class="span6">
+    <h2>Contacts</h2>
+    <p><strong>Chair</strong><br>
+        Brianna Birman<br>
+        <a href="mailto:acm@uiuc.edu">acm@uiuc.edu</a>
+    </p>
+    
+    <p><strong>Vice Chair</strong><br>
+       Sean Nicolay<br
+       <a href="mailto:vice-chair@acm.uiuc.edu">vice-chair@acm.uiuc.edu</a>
+    </p>
+    
+    <p><strong>Treasurer</strong><br>
+       Nathan Handler<br>
+       <a href="mailto:treasurer@acm.uiuc.edu">treasurer@acm.uiuc.edu</a>
+    </p>
+    
+    <p><strong>Secretary</strong><br>
+       Reed La Botz<br>
+       <a href="mailto:secretary@acm.uiuc.edu">secretary@acm.uiuc.edu</a>
+    </p>
+    
+    <p><strong>Cluster Admins</strong><br>
+       Dylan Nugent, Kevin Lange,
+       Markus Schober,
+       Sean Nicolay, Drew Cross,
+       Nick Tabick, Eric Parsons,
+       Josh Ginsburg, Sam Laane,
+       Cole Gleason, Yalan Meng,
+       Kurtis Nusbaum, Matt Dierker,
+       Nathan Handler, Matthew Idzik,
+       Calvin Shirley<br>
+       <a href="mailto:admin@acm.uiuc.edu">admin@acm.uiuc.edu</a>
+     </p>
 
-  <p>Association for Computing Machinery<br>
-1104 Siebel Center for Computer Science<br>
-201 N Goodwin Avenue<br>
-Urbana, IL 61801</p>
-</section>
+     <p><strong>Corporate Committee</strong><br>
+        Ciara Proctor, Brianna Birman,
+        Nikoli Dryden,
+        Rob Burke, Nelson Osacky, Hristo Oskov<br>
+        <a href="mailto:corporate@acm.uiuc.edu">corporate@acm.uiuc.edu</a>
+     </p>
+     
+     <p><strong>Social Chairs</strong><br>
+        Kellie Rios, Ciara Proctor<br>
+        <a href="mailto:social@uiuc.edu">social@acm.uiuc.edu</a>
+     </p>
+     
+     <p><strong>Banks Editor</strong><br>
+        Reed La Botz<br>
+        <a href="mailto:boneyard@uiuc.edu">boneyard@uiuc.edu</a>
+      </p>
 
-<section>
-  <h2>Office Phone</h2>
+  </div>
+  <div class="span6">
+    <h2>Address</h2>
+
+    <p>Association for Computing Machinery<br>
+    1104 Siebel Center for Computer Science<br>
+    201 N Goodwin Avenue<br>
+    Urbana, IL 61801</p>
+
+    <h2>Office Phone</h2>
 
     <p>(217) 333&ndash;5828</p>
-<p>
-If you have general questions about ACM, you can call our office between 9 AM and 5 PM Monday through Friday, and someone will be happy to answer them.  If you prefer email, send mail to <a href="mailto:acm@uiuc.edu">acm@uiuc.edu</a>.
-</p>
-</section>
-
-<section>
-  <h2>Other Contacts</h2>
-  <p><strong>Chair</strong><br>
-      Brianna Birman<br>
-      <a href="mailto:acm@uiuc.edu">acm@uiuc.edu</a>
-  </p>
-  
-  <p><strong>Vice Chair</strong><br>
-     Sean Nicolay<br
-     <a href="mailto:vice-chair@acm.uiuc.edu">vice-chair@acm.uiuc.edu</a>
-  </p>
-  
-  <p><strong>Treasurer</strong><br>
-     Nathan Handler<br>
-     <a href="mailto:treasurer@acm.uiuc.edu">treasurer@acm.uiuc.edu</a>
-  </p>
-  
-  <p><strong>Secretary</strong><br>
-     Reed La Botz<br>
-     <a href="mailto:secretary@acm.uiuc.edu">secretary@acm.uiuc.edu</a>
-  </p>
-  
-  <p><strong>Cluster Admins</strong><br>
-     Dylan Nugent, Kevin Lange,
-     Markus Schober,
-     Sean Nicolay, Drew Cross,
-     Nick Tabick, Eric Parsons,
-     Josh Ginsburg, Sam Laane,
-     Cole Gleason, Yalan Meng,
-     Kurtis Nusbaum, Matt Dierker,
-     Nathan Handler, Matthew Idzik,
-     Calvin Shirley<br>
-     <a href="mailto:admin@acm.uiuc.edu">admin@acm.uiuc.edu</a>
-   </p>
-
-   <p><strong>Corporate Committee</strong><br>
-      Ciara Proctor, Brianna Birman,
-      Nikoli Dryden,
-      Rob Burke, Nelson Osacky, Hristo Oskov<br>
-      <a href="mailto:corporate@acm.uiuc.edu">corporate@acm.uiuc.edu</a>
-   </p>
-   
-   <p><strong>Social Chairs</strong><br>
-      Kellie Rios, Ciara Proctor<br>
-      <a href="mailto:social@uiuc.edu">social@acm.uiuc.edu</a>
-   </p>
-   
-   <p><strong>Banks Editor</strong><br>
-      Reed La Botz<br>
-      <a href="mailto:boneyard@uiuc.edu">boneyard@uiuc.edu</a>
+    <p>
+    If you have general questions about ACM, you can call our office between 9 AM and 5 PM Monday through Friday, and someone will be happy to answer them.  If you prefer email, send mail to <a href="mailto:acm@uiuc.edu">acm@uiuc.edu</a>.
     </p>
-  </section>
+  </div>
+</div>
 {% endblock %}
