group manager mostly there

--- a/templates/intranet/group_manager/main.html
+++ b/templates/intranet/group_manager/main.html
@@ -3,8 +3,31 @@
 <header class="page-header">
 <h1>Group Manager</h1>
 </header>
-<a href="/intranet/group/new" class="btn">Create New Group</a>
-{% for g in group %}
-
-{% endfor %}
+<p>
+	<a href="/intranet/group/new" class="btn">Create New Group</a>
+</p>
+<table class="table table-striped">
+  <thead>
+  <tr>
+  	<th>Edit</td>
+    <th>Type</th>
+    <th>Name</th>
+    <th>Status</th>
+    <th>Members</th>
+    <th>Manage</th>
+  <tr>
+  </thead>
+  <tbody>
+  {% for g in groups %}
+  <tr>
+  	<td><a href="/intranet/group/edit/{{g.id}}"><i class="icon-edit"></i> Edit</a>
+    <td>{{g.get_type_display}}</td>
+    <td>{{g.name}}</td>
+    <td>{{g.status}}</td>
+    <td>{{g.members.count}}</td>
+    <td><a href="/intranet/group/manage/{{g.id}}"><i class="icon-cog"></i> Manage</a>
+  </tr>
+  {% endfor %}
+  </tbody>
+</table>
 {% endblock %}
